Proj2/Backups/Proj2b/y.output
Terminals unused in grammar

   ERROR


State 102 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier getID SEMI
    7                | type_specifier getID LSQ NUM RSQ SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier getID LPAREN params RPAREN compound_stmt

   11 params: /* empty */
   12       | param_list
   13       | VOID

   14 param_list: param_list COMMA param
   15           | param

   16 param: type_specifier getID
   17      | type_specifier getID LSQ RSQ

   18 compound_stmt: LCURLY local_declarations statement_list RCURLY

   19 local_declarations: /* empty */
   20                   | local_declarations var_declaration

   21 statement_list: /* empty */
   22               | statement_list statement

   23 statement: expression_stmt
   24          | compound_stmt
   25          | selection_stmt
   26          | iteration_stmt
   27          | return_stmt

   28 expression_stmt: expression SEMI
   29                | SEMI

   30 selection_stmt: IF LPAREN expression RPAREN statement
   31               | IF LPAREN expression RPAREN statement ELSE statement

   32 iteration_stmt: WHILE LPAREN expression RPAREN statement

   33 return_stmt: RETURN SEMI
   34            | RETURN expression SEMI

   35 expression: var ASSIGN expression
   36           | simple_expression

   37 var: getID
   38    | getID LSQ expression RSQ

   39 simple_expression: additive_expression LT additive_expression
   40                  | additive_expression LTEQ additive_expression
   41                  | additive_expression GT additive_expression
   42                  | additive_expression GTEQ additive_expression
   43                  | additive_expression EQ additive_expression
   44                  | additive_expression NEQ additive_expression
   45                  | additive_expression

   46 additive_expression: additive_expression PLUS term
   47                    | additive_expression MINUS term
   48                    | term

   49 term: term TIMES factor
   50     | term OVER factor
   51     | factor

   52 factor: LPAREN expression RPAREN
   53       | var
   54       | call
   55       | NUM

   56 call: getID LPAREN args RPAREN

   57 args: /* empty */
   58     | arg_list

   59 arg_list: arg_list COMMA expression
   60         | expression

   61 getID: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 30 31
ELSE (259) 31
INT (260) 8
RETURN (261) 33 34
VOID (262) 9 13
WHILE (263) 32
ASSIGN (264) 35
EQ (265) 43
LT (266) 39
LTEQ (267) 40
GT (268) 41
GTEQ (269) 42
NEQ (270) 44
PLUS (271) 46
MINUS (272) 47
TIMES (273) 49
OVER (274) 50
LPAREN (275) 10 30 31 32 52 56
RPAREN (276) 10 30 31 32 52 56
LSQ (277) 7 17 38
RSQ (278) 7 17 38
LCURLY (279) 18
RCURLY (280) 18
COMMA (281) 14 59
SEMI (282) 6 7 28 29 33 34
ID (283) 61
NUM (284) 7 55
ERROR (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
var_declaration (35)
    on left: 6 7, on right: 4 20
type_specifier (36)
    on left: 8 9, on right: 6 7 10 16 17
fun_declaration (37)
    on left: 10, on right: 5
params (38)
    on left: 11 12 13, on right: 10
param_list (39)
    on left: 14 15, on right: 12 14
param (40)
    on left: 16 17, on right: 14 15
compound_stmt (41)
    on left: 18, on right: 10 24
local_declarations (42)
    on left: 19 20, on right: 18 20
statement_list (43)
    on left: 21 22, on right: 18 22
statement (44)
    on left: 23 24 25 26 27, on right: 22 30 31 32
expression_stmt (45)
    on left: 28 29, on right: 23
selection_stmt (46)
    on left: 30 31, on right: 25
iteration_stmt (47)
    on left: 32, on right: 26
return_stmt (48)
    on left: 33 34, on right: 27
expression (49)
    on left: 35 36, on right: 28 30 31 32 34 35 38 52 59 60
var (50)
    on left: 37 38, on right: 35 53
simple_expression (51)
    on left: 39 40 41 42 43 44 45, on right: 36
additive_expression (52)
    on left: 46 47 48, on right: 39 40 41 42 43 44 45 46 47
term (53)
    on left: 49 50 51, on right: 46 47 48 49 50
factor (54)
    on left: 52 53 54 55, on right: 49 50 51
call (55)
    on left: 56, on right: 54
args (56)
    on left: 57 58, on right: 56
arg_list (57)
    on left: 59 60, on right: 58 59
getID (58)
    on left: 61, on right: 6 7 10 16 17 37 38 56


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


state 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


state 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    6 var_declaration: type_specifier . getID SEMI
    7                | type_specifier . getID LSQ NUM RSQ SEMI
   10 fun_declaration: type_specifier . getID LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    getID  go to state 12


state 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 11

   61 getID: ID .

    $default  reduce using rule 61 (getID)


state 12

    6 var_declaration: type_specifier getID . SEMI
    7                | type_specifier getID . LSQ NUM RSQ SEMI
   10 fun_declaration: type_specifier getID . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LSQ     shift, and go to state 14
    SEMI    shift, and go to state 15


state 13

   10 fun_declaration: type_specifier getID LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    $default  reduce using rule 11 (params)

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


state 14

    7 var_declaration: type_specifier getID LSQ . NUM RSQ SEMI

    NUM  shift, and go to state 21


state 15

    6 var_declaration: type_specifier getID SEMI .

    $default  reduce using rule 6 (var_declaration)


state 16

    9 type_specifier: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 9 (type_specifier)


state 17

   16 param: type_specifier . getID
   17      | type_specifier . getID LSQ RSQ

    ID  shift, and go to state 11

    getID  go to state 22


state 18

   10 fun_declaration: type_specifier getID LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 23


state 19

   12 params: param_list .
   14 param_list: param_list . COMMA param

    COMMA  shift, and go to state 24

    $default  reduce using rule 12 (params)


state 20

   15 param_list: param .

    $default  reduce using rule 15 (param_list)


state 21

    7 var_declaration: type_specifier getID LSQ NUM . RSQ SEMI

    RSQ  shift, and go to state 25


state 22

   16 param: type_specifier getID .
   17      | type_specifier getID . LSQ RSQ

    LSQ  shift, and go to state 26

    $default  reduce using rule 16 (param)


state 23

   10 fun_declaration: type_specifier getID LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 27

    compound_stmt  go to state 28


state 24

   14 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 29


state 25

    7 var_declaration: type_specifier getID LSQ NUM RSQ . SEMI

    SEMI  shift, and go to state 30


state 26

   17 param: type_specifier getID LSQ . RSQ

    RSQ  shift, and go to state 31


state 27

   18 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 32


state 28

   10 fun_declaration: type_specifier getID LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


state 29

   14 param_list: param_list COMMA param .

    $default  reduce using rule 14 (param_list)


state 30

    7 var_declaration: type_specifier getID LSQ NUM RSQ SEMI .

    $default  reduce using rule 7 (var_declaration)


state 31

   17 param: type_specifier getID LSQ RSQ .

    $default  reduce using rule 17 (param)


state 32

   18 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   20 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 33
    type_specifier   go to state 34
    statement_list   go to state 35


state 33

   20 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 20 (local_declarations)


state 34

    6 var_declaration: type_specifier . getID SEMI
    7                | type_specifier . getID LSQ NUM RSQ SEMI

    ID  shift, and go to state 11

    getID  go to state 36


state 35

   18 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   22 statement_list: statement_list . statement

    IF      shift, and go to state 37
    RETURN  shift, and go to state 38
    WHILE   shift, and go to state 39
    LPAREN  shift, and go to state 40
    LCURLY  shift, and go to state 27
    RCURLY  shift, and go to state 41
    SEMI    shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 36

    6 var_declaration: type_specifier getID . SEMI
    7                | type_specifier getID . LSQ NUM RSQ SEMI

    LSQ   shift, and go to state 14
    SEMI  shift, and go to state 15


state 37

   30 selection_stmt: IF . LPAREN expression RPAREN statement
   31               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 58


state 38

   33 return_stmt: RETURN . SEMI
   34            | RETURN . expression SEMI

    LPAREN  shift, and go to state 40
    SEMI    shift, and go to state 59
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 60
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 39

   32 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 61


state 40

   52 factor: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 62
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 41

   18 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 18 (compound_stmt)


state 42

   29 expression_stmt: SEMI .

    $default  reduce using rule 29 (expression_stmt)


state 43

   55 factor: NUM .

    $default  reduce using rule 55 (factor)


state 44

   24 statement: compound_stmt .

    $default  reduce using rule 24 (statement)


state 45

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


state 46

   23 statement: expression_stmt .

    $default  reduce using rule 23 (statement)


state 47

   25 statement: selection_stmt .

    $default  reduce using rule 25 (statement)


state 48

   26 statement: iteration_stmt .

    $default  reduce using rule 26 (statement)


state 49

   27 statement: return_stmt .

    $default  reduce using rule 27 (statement)


state 50

   28 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 63


state 51

   35 expression: var . ASSIGN expression
   53 factor: var .

    ASSIGN  shift, and go to state 64

    $default  reduce using rule 53 (factor)


state 52

   36 expression: simple_expression .

    $default  reduce using rule 36 (expression)


state 53

   39 simple_expression: additive_expression . LT additive_expression
   40                  | additive_expression . LTEQ additive_expression
   41                  | additive_expression . GT additive_expression
   42                  | additive_expression . GTEQ additive_expression
   43                  | additive_expression . EQ additive_expression
   44                  | additive_expression . NEQ additive_expression
   45                  | additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    EQ     shift, and go to state 65
    LT     shift, and go to state 66
    LTEQ   shift, and go to state 67
    GT     shift, and go to state 68
    GTEQ   shift, and go to state 69
    NEQ    shift, and go to state 70
    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 45 (simple_expression)


state 54

   48 additive_expression: term .
   49 term: term . TIMES factor
   50     | term . OVER factor

    TIMES  shift, and go to state 73
    OVER   shift, and go to state 74

    $default  reduce using rule 48 (additive_expression)


state 55

   51 term: factor .

    $default  reduce using rule 51 (term)


state 56

   54 factor: call .

    $default  reduce using rule 54 (factor)


state 57

   37 var: getID .
   38    | getID . LSQ expression RSQ
   56 call: getID . LPAREN args RPAREN

    LPAREN  shift, and go to state 75
    LSQ     shift, and go to state 76

    $default  reduce using rule 37 (var)


state 58

   30 selection_stmt: IF LPAREN . expression RPAREN statement
   31               | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 77
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 59

   33 return_stmt: RETURN SEMI .

    $default  reduce using rule 33 (return_stmt)


state 60

   34 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 78


state 61

   32 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 79
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 62

   52 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 80


state 63

   28 expression_stmt: expression SEMI .

    $default  reduce using rule 28 (expression_stmt)


state 64

   35 expression: var ASSIGN . expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 81
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 65

   43 simple_expression: additive_expression EQ . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 83
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 66

   39 simple_expression: additive_expression LT . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 84
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 67

   40 simple_expression: additive_expression LTEQ . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 85
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 68

   41 simple_expression: additive_expression GT . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 86
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 69

   42 simple_expression: additive_expression GTEQ . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 87
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 70

   44 simple_expression: additive_expression NEQ . additive_expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var                  go to state 82
    additive_expression  go to state 88
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 71

   46 additive_expression: additive_expression PLUS . term

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var     go to state 82
    term    go to state 89
    factor  go to state 55
    call    go to state 56
    getID   go to state 57


state 72

   47 additive_expression: additive_expression MINUS . term

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var     go to state 82
    term    go to state 90
    factor  go to state 55
    call    go to state 56
    getID   go to state 57


state 73

   49 term: term TIMES . factor

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var     go to state 82
    factor  go to state 91
    call    go to state 56
    getID   go to state 57


state 74

   50 term: term OVER . factor

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    var     go to state 82
    factor  go to state 92
    call    go to state 56
    getID   go to state 57


state 75

   56 call: getID LPAREN . args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    $default  reduce using rule 57 (args)

    expression           go to state 93
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    args                 go to state 94
    arg_list             go to state 95
    getID                go to state 57


state 76

   38 var: getID LSQ . expression RSQ

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    expression           go to state 96
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 77

   30 selection_stmt: IF LPAREN expression . RPAREN statement
   31               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 97


state 78

   34 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 34 (return_stmt)


state 79

   32 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 98


state 80

   52 factor: LPAREN expression RPAREN .

    $default  reduce using rule 52 (factor)


state 81

   35 expression: var ASSIGN expression .

    $default  reduce using rule 35 (expression)


state 82

   53 factor: var .

    $default  reduce using rule 53 (factor)


state 83

   43 simple_expression: additive_expression EQ additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 43 (simple_expression)


state 84

   39 simple_expression: additive_expression LT additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 39 (simple_expression)


state 85

   40 simple_expression: additive_expression LTEQ additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 40 (simple_expression)


state 86

   41 simple_expression: additive_expression GT additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 41 (simple_expression)


state 87

   42 simple_expression: additive_expression GTEQ additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 42 (simple_expression)


state 88

   44 simple_expression: additive_expression NEQ additive_expression .
   46 additive_expression: additive_expression . PLUS term
   47                    | additive_expression . MINUS term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 44 (simple_expression)


state 89

   46 additive_expression: additive_expression PLUS term .
   49 term: term . TIMES factor
   50     | term . OVER factor

    TIMES  shift, and go to state 73
    OVER   shift, and go to state 74

    $default  reduce using rule 46 (additive_expression)


state 90

   47 additive_expression: additive_expression MINUS term .
   49 term: term . TIMES factor
   50     | term . OVER factor

    TIMES  shift, and go to state 73
    OVER   shift, and go to state 74

    $default  reduce using rule 47 (additive_expression)


state 91

   49 term: term TIMES factor .

    $default  reduce using rule 49 (term)


state 92

   50 term: term OVER factor .

    $default  reduce using rule 50 (term)


state 93

   60 arg_list: expression .

    $default  reduce using rule 60 (arg_list)


state 94

   56 call: getID LPAREN args . RPAREN

    RPAREN  shift, and go to state 99


state 95

   58 args: arg_list .
   59 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 100

    $default  reduce using rule 58 (args)


state 96

   38 var: getID LSQ expression . RSQ

    RSQ  shift, and go to state 101


state 97

   30 selection_stmt: IF LPAREN expression RPAREN . statement
   31               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 37
    RETURN  shift, and go to state 38
    WHILE   shift, and go to state 39
    LPAREN  shift, and go to state 40
    LCURLY  shift, and go to state 27
    SEMI    shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 102
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    getID                go to state 57


state 98

   32 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 37
    RETURN  shift, and go to state 38
    WHILE   shift, and go to state 39
    LPAREN  shift, and go to state 40
    LCURLY  shift, and go to state 27
    SEMI    shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
